# Colonias_Flutter

./: README.md
flutter_application/: pubspec.yaml
flutter_application/android/: CMakeLists.txt  build.gradle.kts
flutter_application/android/app/: build.gradle.kts
flutter_application/android/app/src/main/: AndroidManifest.xml
flutter_application/android/app/src/main/cpp/: CMakeLists.txt
flutter_application/android/app/src/main/cpp/include/: colonias_detector.h  colonias_detector_ffi.h
flutter_application/ios/Runner/: Info.plist
flutter_application/lib/: main.dart
flutter_application/lib/Styles/: styles.dart
flutter_application/lib/ffi/: colonias_detector.cpp  colonias_detector_ffi.c++
flutter_application/lib/pantallas/: DetectionPage.dart  PantallaAnalisis.dart  PantallaCamara.dart  PantallaInicio.dart  PantallaPreview.dart  RestAPI.dart  colonias_detector.dart
flutter_application/native/: CMakeLists.txt
flutter_application/native/android/: CMakeLists.txt
flutter_application/native/src/: colonias_detector_ffi.cpp
